<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PC Stores POS</string>
    <string name="o">o</string>
    <string name="i">i</string>
    <string name="n">n</string>
    <string name="t">t</string>
    <string name="dot">o</string>
    <string name="ofSale">of Sale</string>
    <string name="rights">© 1998–2018 PC STORES, All rights reserved.</string>
    <string name="title_activity_nav_main">NavMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="POS">PC Stores Point Of Sale</string>
    <string name="website">www.pcstores.com.jo</string>
    <string name="TakeAway">TakeAway</string>
    <string name="Tables">Tables</string>
    <string name="Delivery">Delivery</string>
    <string name="ScheduledOrders">Scheduled Orders</string>
    <string name="DriveThru" tools:ignore="Typos">Drive Thru</string>
    <string name="DirectedMeals">Output Meals</string>
    <string name="Clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Pay">Pay</string>
    <string name="Prepare">Prepare</string>
    <string name="Flavors">Flavors</string>
    <string name="Flavorsadded">Flavors added</string>
    <string name="NoFlavorsSelected">No Flavors Selected!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextView">TextView</string>
    <string name="Total">TOTAL</string>
    <string name="Item">Item</string>
    <string name="Qty">Qty</string>
    <string name="Cash">Cash</string>
    <string name="Visa">Visa</string>
    <string name="MasterCard">Master</string>
    <string name="Amex">Amex</string>
    <string name="Prepaid">Prepaid</string>
    <string name="Points">Points</string>
    <string name="BalanceDue">Balance Due</string>
    <string name="AmountTendered">Amount Tendered</string>
    <string name="Change">Change</string>
    <string name="Done">Done</string>
    <string name="Print">Print</string>
    <string name="SubTotal">SubTotal</string>
    <string name="Discount">Discount</string>
    <string name="TaxTotal">TaxTotal</string>
    <string name="NetTotal">NetTotal</string>
    <string name="Payment">Payment</string>
    <string name="PayType">PayType</string>
    <string name="CashNo">CashNo</string>
    <string name="Cashier">Cashier</string>
    <string name="CashStatus">Close Cash</string>
    <string name="EndDay">End Day</string>
    <string name="Close">Close</string>
    <string name="AvailableCash">Available Cash</string>
    <string name="CloseCash">Close Cash</string>
    <string name="AmountDue">Amount Due</string>
    <string name="OpenBalance">Open Balance</string>
    <string name="InvoicesCount">Invoices Count</string>
    <string name="CreditPayments">Credit Payments</string>
    <string name="ReturnSales">Return Sales</string>
    <string name="NetSales">Net Sales</string>
    <string name="Summary">Summary</string>
    <string name="InvoiceNo">InvoiceNo</string>
    <string name="ActualTime">Actual Time</string>
    <string name="Employee">Employee</string>
    <string name="FromDate">From Date</string>
    <string name="ToDate">To Date</string>
    <string name="Return">Return</string>
    <string name="Registration">Registration</string>
    <string name="Name">Name</string>
    <string name="Apply">Apply</string>
    <string name="editCategory">Edit Category</string>
    <string name="editItem">Edit Item</string>
    <string name="Save">Save</string>
    <string name="SelectOption">Select Option</string>
    <string name="selectFlavors">Select Flavors</string>
    <string name="invalidUsernameError">User name is Invalid!</string>
    <string name="invalidPwError">Password is Invalid!</string>
    <string name="userSuccess">User Successfully added</string>
    <string name="deleteQuestion">Are you sure you want to delete item?</string>
    <string name="noItems">You can\'t close empty invoice!</string>
    <string name="noCategories">You can\'t make items without creating categories!</string>
    <string name="message">Message</string>
    <string name="poslogo">posLogo</string>

    <!--Splash_Strings-->
    <string name="startImgDescription">appLogo</string>
    <string name="startimgpcstores">startImgPCStores</string>
    <string name="pcstoresCopyrights">PC STORES ©</string>

    <!--Login_Strings-->
    <string name="Password">Password</string>
    <string name="UserName">User Name</string>
    <string name="usernameinpImg">User Name</string>
    <string name="userpassinpImg">User Password</string>
    <string name="Login">Login</string>
    <string name="gif">Gif</string>
    <string name="KeepMeLoggedIn">Keep me logged in</string>
    <string name="Reservations">Reservations</string>
    <string name="regEnterNamePw">Please Enter Name and Password!</string>

    <!--nav-main Strings-->
    <string name="navSmain">Main</string>
    <string name="navSitems">Items</string>
    <string name="navSreceipts">Receipts</string>
    <string name="navSsales">Sales</string>
    <string name="navGScash">Cash</string>
    <string name="navSclose_cash">Close Cash</string>
    <string name="navGSexit">Exit</string>
    <string name="navSlog_out">Log Out</string>
    <string name="action_settings">Settings</string>

    <!--ItemFragment Strings-->
    <string name="addFlavorTxT">Add Flavor</string>
    <string name="addItemTxT">AddItem</string>
    <string name="addCatTxT">AddCategory</string>

    <!--add_category_dialog Strings-->
    <string name="CategoryName">Category Name</string>
    <string name="CategoryCode">Category Code</string>
    <string name="UnderCategory">Under Category</string>

    <!--add_item_dialog Strings-->
    <string name="ItemCode">Item Code</string>
    <string name="ItemName">Item Name</string>
    <string name="Category">Category</string>
    <string name="UnitPrice">Unit Price</string>
    <string name="Tax">Tax</string>

    <!--add_flavor_dialog Strings-->
    <string name="FlavorName">Flavor Name</string>
    <string name="Price">Price</string>

    <!--mainFragment Strings-->




</resources>
