<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ba"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Item"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Qty"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Price"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>