<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: Update blank fragment layout -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/fatherCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/UnderCategory"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border">

            <Spinner
                android:id="@+id/spCategory"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </RelativeLayout>

    <TextView
        android:id="@+id/txtcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/CategoryCode"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:labelFor="@id/etCategoryID"/>

    <EditText
        android:id="@+id/etCategoryID"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/CategoryName"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:labelFor="@id/etCategoryName"/>

    <EditText
        android:id="@+id/etCategoryName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="14sp" />

</LinearLayout>
</ScrollView>

